test/integration/bad/missing_dist_suffix/lpmf_lpdf_replacement3.stan
data {
}
model {
    // known family, known suffix, not implemented
    target += binomial_lupdf(1|0,1);
}
